--- a/style.css
+++ b/style.css
@@ -1,15 +1,31 @@
+* {
+  box-sizing: border-box;
+}
+
 .column {
-  width: 33%;
-  height: 100%;
+  position: relative;
+  float: left;
+  width: 33.33%;
+  padding: 10px;
 }
 
-.column img {
-  width: 90%;
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.pic {
   opacity: 1;
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+  padding: 10px;
+  cursor: pointer;
 }
 
-.column img:hover {
-  opacity: 0.5;
+.pic:hover {
+  opacity: .3;
 }
