--- a/style.css
+++ b/style.css
@@ -29,3 +29,41 @@
 .pic:hover {
   opacity: .3;
 }
+
+#dimmer {
+    background:#000;
+    opacity:0.5;
+    position:fixed; /* important to use fixed, not absolute */
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    display:none;
+    z-index:1;
+}
+
+button {
+  display: none;
+  margin-top: 400px;
+  position: fixed;
+  z-index: 2;
+}
+
+#next {
+  left: 10px;
+}
+
+#prev {
+  right: 10px;
+}
+
+#close {
+  left: 760px;
+  bottom: 10px;
+}
+
+#bigPic {
+  position: fixed;
+  left: 420px;
+  z-index: 10;
+}
